--- a/html/index/index.html
+++ b/html/index/index.html
@@ -7,7 +7,7 @@
 <body>
 <input type="button" id="btnDialog" value="show me the money"/>
 <script src="../../seajs/1.3.1/sea.js"></script>
-<script src="../../rootConfig.js"></script>
+<!--<script src="../../rootConfig.js"></script>-->
 <script type="text/javascript">
     seajs.use("../../app/app1/index/src/index.js")
 </script>
